# all-agentic-architectures

./: .gitignore  01_reflection_vi.html  01_reflection_vi.md  02_tool_use_vi.html  02_tool_use_vi.md  03_ReAct_vi.html  03_ReAct_vi.md  04_planning_vi.html  04_planning_vi.ipynb  04_planning_vi.md  05_multi_agent_vi.html  05_multi_agent_vi.md  06_PEV_vi.html  06_PEV_vi.md  07_blackboard_vi.html  07_blackboard_vi.md  08_episodic_with_semantic_vi.html  08_episodic_with_semantic_vi.md  09_tree_of_thoughts_vi.html  09_tree_of_thoughts_vi.md  10_mental_loop_vi.html  10_mental_loop_vi.md  11_meta_controller_vi.html  11_meta_controller_vi.md  12_graph_vi.html  12_graph_vi.md  13_ensemble_vi.html  13_ensemble_vi.md  14_dry_run_vi.html  14_dry_run_vi.md  15_RLHF_vi.html  15_RLHF_vi.md  16_cellular_automata_vi.html  16_cellular_automata_vi.md  17_reflexive_metacognitive_vi.html  17_reflexive_metacognitive_vi.md  README_vi.html  README_vi.md
.agent/workflows/: translate-md-tech-vi.md
agentic_architecture_practice/: 01_reflection.py  02_tool_use.py  03_ReAct.py  04_planning.py  05_multi_agent.py  logger_utils.py  main.py  pyproject.toml  requirement.txt
